--- a/config/database.yml
+++ b/config/database.yml
@@ -16,9 +16,8 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: aquaduct_tes
+  database: aquaduct_test
   username: mkirk
   port: 5432
-
   pool: 5
   timeout: 5000
