--- a/config/database.yml
+++ b/config/database.yml
@@ -1,23 +1,23 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
 development:
   adapter: postgresql
-  database: aquaduct_development
-  username: mkirk
-  port: 5432
+  database: aqueduct_development
+  password: password
+  host: localhost
   pool: 5
   timeout: 5000
+  host_names:
+    - "localhost"
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: aquaduct_test
-  username: mkirk
-  port: 5432
+  database: aqueduct_test
+  password: password
+  host: localhost
   pool: 5
   timeout: 5000
+  host_names:
+    - test.localhost
+
